--- a/project2/style.css
+++ b/project2/style.css
@@ -3,7 +3,6 @@
     box-sizing: border-box;
 }
 
-html,
 body {
     margin: 0;
     padding: 0;
@@ -98,8 +97,8 @@ input[type=radio] {
     width: 100%;
     height: 100%;
     display: grid;
-    justify-content: center;
     text-align: center;
+    position: relative;
 }
 
 iframe {
@@ -107,7 +106,9 @@ iframe {
     height: 200%;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
-    /* background-color: #227ED4;*/
+    border-color: #ffffff00;
+    z-index: 2;
+    position: relative;
 }
 
 .container {
