--- a/project4/style.css
+++ b/project4/style.css
@@ -34,7 +34,7 @@ input[type=radio] {
 }
 
 .gradienttext1 {
-    background: linear-gradient(#227ED4, #8952E3);
+    background: linear-gradient(to bottom right, #227ED4, #8952E3);
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -45,7 +45,7 @@ input[type=radio] {
 }
 
 .gradienttext2 {
-    background: linear-gradient(#D4D122, #52E374);
+    background: linear-gradient(to bottom right, #D4D122, #52E374);
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -56,7 +56,7 @@ input[type=radio] {
 }
 
 .gradienttext3 {
-    background: linear-gradient(#7222D4, #E35285);
+    background: linear-gradient(to bottom right, #7222D4, #E35285);
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
