--- a/Integrations Slideshow/style.css
+++ b/Integrations Slideshow/style.css
@@ -49,6 +49,7 @@ body {
 .info {
     font-size: 16px;
     font-weight: 400;
+    line-height: 24px;
     color: #5D5D63;
     margin-top: 10px;
     max-width: 500px;
