--- a/Comments/project2/style.css
+++ b/Comments/project2/style.css
@@ -201,6 +201,11 @@ body {
     -moz-transition: transform 0.3s ease, height 0.3s ease;
     -ms-transition: transform 0.3s ease, height 0.3s ease;
     -o-transition: transform 0.3s ease, height 0.3s ease;
+    transition: 0.4s 0.4s;
+    -webkit-transition: 0.4s 0.4s;
+    -moz-transition: 0.4s 0.4s;
+    -ms-transition: 0.4s 0.4s;
+    -o-transition: 0.4s 0.4s;
 }
 
 .ag-offer_item:hover {
@@ -209,6 +214,7 @@ body {
     -moz-transform: scale(0.95);
     -ms-transform: scale(0.95);
     -o-transform: scale(0.95);
+    box-shadow: 0px 0px 25px #b2b2b2;
 }
 
 .ag-offer_item:hover .ag-offer_visible-item {
